resolved issues that showed up post-deploy - event details popup on click event -> screen moved, now resolved - specified color to close button text - updated mobile css to fit better on mobile screens - updated favicon

--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -145,6 +145,10 @@
     margin: 6px;
     font-size: 6vw;
   }
+
+  .calendar-container {
+    height: 85vh; 
+  }
 }
 
 @media (max-width: 405px) {
